# Dynamic-Retail-Pricing-via-Multi-Armed-Bandits-MAB-

./: .gitignore  README.md
.superpowers/sdd/: task-5-report.md  task-8-report.md  task-9-report.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/routers/: datasets.py  experiments.py
backend/app/schemas/: experiments.py
backend/app/services/: data_service.py  experiment_service.py
backend/experiments/: run_experiment.py
backend/mab/: metrics.py  simulation.py
backend/mab/algorithms/: base.py  epsilon_greedy.py  oracle.py  thompson.py  ucb.py
backend/mab/environments/: base.py  elasticity.py  empirical.py
backend/pipelines/: clean_data.py  download_data.py  make_sample.py
backend/tests/: test_algorithms.py  test_api.py  test_environments.py  test_experiment_runner.py  test_pipeline.py  test_simulation.py
data/samples/: catalog.json  precomputed_results.json
docs/: deployment.md
docs/superpowers/plans/: 2026-07-09-dynamic-retail-pricing-mab.md
docs/superpowers/specs/: 2026-07-09-dynamic-retail-pricing-mab-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  lab.ts  styles.css  types.ts
frontend/src/api/: client.ts  fixtures.ts
frontend/src/charts/: ArmShareChart.tsx  RevenueRegretChart.tsx  RewardTrendChart.tsx
frontend/src/components/: KpiCard.tsx  LabControls.tsx  StrategyTable.tsx  Tabs.tsx
frontend/src/pages/: Lab.tsx  Overview.tsx
