[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-retail-pricing-mab"
version = "0.1.0"
description = "Dynamic retail pricing with multi-armed bandits"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
  "pydantic>=2.8,<3.0",
  "pandas>=2.2,<3.0",
  "numpy>=2.0,<3.0",
  "openpyxl>=3.1,<4.0",
  "requests>=2.32,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.setuptools]
packages = ["app", "mab", "mab.algorithms", "mab.environments", "pipelines", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"